--- a/products.html
+++ b/products.html
@@ -39,7 +39,11 @@
   <main class="pb-5 container">
     <div class="container">
       <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+        <span id='nombre'></span><br>
+        <span id='descripcion'></span><br>
+        <span id='costo'></span><br>
+        <span id='moneda'></span><br>
+        <span id='vendidos'></span><br>
       </div>
     </div>
   </main>
