--- a/products.html
+++ b/products.html
@@ -45,11 +45,15 @@
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
+  <main role="main" class="pb-5 container">
+    <div class="text-center p-4">
+      <h2>Listado</h2>
+    </div>
     <div class="container">
       <div class="alert alert-danger text-center" role="alert">
         <div class="row">
           <div class="list-group" id="cat-list-container">
+            <a href="https://youtu.be/zhK4nFlwI0A">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
@@ -66,6 +70,7 @@
                 </div>
                 </div>
               </div>
+            </a>
               <div class="list-group-item list-group-item-action">
                 <div class="row">
                   <div class="col-3">
