--- a/products.html
+++ b/products.html
@@ -215,9 +215,9 @@
       <div></div>
     </div>
   </div>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/products.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="init.js"></script>
+  <script src="products.js"></script>
 </body>
 
 </html>
