--- a/product-info.html
+++ b/product-info.html
@@ -7,9 +7,9 @@
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="font-awesome.min.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,10 +36,95 @@
       </div>
     </div>
   </nav>
-  <main>
+  <main role="main" class="pb-5 container">
+   <div class="text-center p-4">
+    <h2>Productos</h2>
+    <p>Veras aqui todos los productos de la categoria Autos.</p>
+   </div>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="row">
+        <div class="list-group" id="cat-list-container">
+         <div class="list-group-item list-group-item-action">
+          <div class="row">
+            <div class="col-3">
+              <img src="prod50921_1.jpg" alt="product image" class="img-thumbnail">
+            </div>
+            <div class="col">
+              <div class="d-flex w-100 justify-content-between">
+                <div class="mb-1">
+                  <h4> </h4>
+                  <p> </p>
+                </div>
+                <small class="text-muted"> </small>
+              </div>
+            </div>
+          </div>
+         </div>
+         <div class="list-group-item list-group-item-action">
+          <div class="row">
+            <div class="col-3">
+              <img src="" alt="product image" class="img-thumbnail">
+            </div>
+            <div class="col">
+              <div class="d-flex w-100 justify-content-between">
+                <div class="mb-1">
+                  <h4> </h4>
+                  <p> </p>
+                </div>
+                <small class="text-muted"> </small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="list-group-item list-group-item-action">
+          <div class="row">
+            <div class="col-3">
+              <img src="" alt="product image" class="img-thumbnail">
+            </div>
+            <div class="col">
+              <div class="d-flex w-100 justify-content-between">
+                <div class="mb-1">
+                  <h4> </h4>
+                  <p> </p>
+                </div>
+                <small class="text-muted"> </small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="list-group-item list-group-item-action">
+          <div class="row">
+            <div class="col-3">
+              <img src="" alt="product image" class="img-thumbnail">
+            </div>
+            <div class="col">
+              <div class="d-flex w-100 justify-content-between">
+                <div class="mb-1">
+                  <h4> </h4>
+                  <p> </p>
+                </div>
+                <small class="text-muted"> </small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="list-group-item list-group-item-action">
+          <div class="row">
+            <div class="col-3">
+              <img src="" alt="product image" class="img-thumbnail">
+            </div>
+            <div class="col">
+              <div class="d-flex w-100 justify-content-between">
+                <div class="mb-1">
+                  <h4> </h4>
+                  <p> </p>
+                </div>
+                <small class="text-muted"> </small>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
       </div>
     </div>
   </main>
@@ -61,9 +146,9 @@
       <div></div>
     </div>
   </div>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/product-info.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="init.js"></script>
+  <script src="product-info.js"></script>
 </body>
 
 </html>
