--- a/product-info.html
+++ b/product-info.html
@@ -52,10 +52,10 @@
             <div class="col">
               <div class="d-flex w-100 justify-content-between">
                 <div class="mb-1">
-                  <h4> </h4>
-                  <p> </p>
+                  <h4>Chevrolet Onix Joy - USD13500 </h4>
+                  <p>Generación 2019, variedad de colores. Motor 1.0, ideal para ciudad. </p>
                 </div>
-                <small class="text-muted"> </small>
+                <small class="text-muted">14 vendidos</small>
               </div>
             </div>
           </div>
@@ -63,15 +63,15 @@
          <div class="list-group-item list-group-item-action">
           <div class="row">
             <div class="col-3">
-              <img src="" alt="product image" class="img-thumbnail">
+              <img src="prod50922_1.jpg" alt="product image" class="img-thumbnail">
             </div>
             <div class="col">
               <div class="d-flex w-100 justify-content-between">
                 <div class="mb-1">
-                  <h4> </h4>
-                  <p> </p>
+                  <h4>Fiat Way - USD14500</h4>
+                  <p>La versión de Fiat que brinda confort y a un precio accesible.</p>
                 </div>
-                <small class="text-muted"> </small>
+                <small class="text-muted">52 vendidos</small>
               </div>
             </div>
           </div>
@@ -79,15 +79,15 @@
         <div class="list-group-item list-group-item-action">
           <div class="row">
             <div class="col-3">
-              <img src="" alt="product image" class="img-thumbnail">
+              <img src="prod50923_1.jpg" alt="product image" class="img-thumbnail">
             </div>
             <div class="col">
               <div class="d-flex w-100 justify-content-between">
                 <div class="mb-1">
-                  <h4> </h4>
-                  <p> </p>
+                  <h4>Suzuki Celerio - USD12500</h4>
+                  <p>Un auto que se ha ganado la buena fama por su economía con el combustible.</p>
                 </div>
-                <small class="text-muted"> </small>
+                <small class="text-muted">25 vendidos</small>
               </div>
             </div>
           </div>
@@ -95,15 +95,15 @@
         <div class="list-group-item list-group-item-action">
           <div class="row">
             <div class="col-3">
-              <img src="" alt="product image" class="img-thumbnail">
+              <img src="prod50924_1.jpg" alt="product image" class="img-thumbnail">
             </div>
             <div class="col">
               <div class="d-flex w-100 justify-content-between">
                 <div class="mb-1">
-                  <h4> </h4>
-                  <p> </p>
+                  <h4>Peugeot 208 - USD15200</h4>
+                  <p>El modelo de auto que se sigue renovando y manteniendo su prestigio en comodidad.</p>
                 </div>
-                <small class="text-muted"> </small>
+                <small class="text-muted">17 vendidos</small>
               </div>
             </div>
           </div>
@@ -111,15 +111,15 @@
         <div class="list-group-item list-group-item-action">
           <div class="row">
             <div class="col-3">
-              <img src="" alt="product image" class="img-thumbnail">
+              <img src="prod50925_1.jpg" alt="product image" class="img-thumbnail">
             </div>
             <div class="col">
               <div class="d-flex w-100 justify-content-between">
                 <div class="mb-1">
-                  <h4> </h4>
-                  <p> </p>
+                  <h4>Bugatti Chiron - USD3500000</h4>
+                  <p>El mejor hiperdeportivo de mundo. Producción limitada a 500 unidades.</p>
                 </div>
-                <small class="text-muted"> </small>
+                <small class="text-muted">0 vendidos</small>
               </div>
             </div>
           </div>
