--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="row">
           <div class="list-group" id="cat-list-container">
-            <a href="https://youtu.be/zhK4nFlwI0A">
+            <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
