--- a/products.html
+++ b/products.html
@@ -63,6 +63,7 @@
                 </div>
               </div>
             </a>
+            <a href="product-info.html">
               <div class="list-group-item list-group-item-action">
                 <div class="row">
                   <div class="col-3">
@@ -79,6 +80,8 @@
                   </div>
                 </div>
               </div>
+            </a>
+            <a href="product-info.html">
               <div class="list-group-item list-group-item-action">
                 <div class="row">
                   <div class="col-3">
@@ -94,6 +97,8 @@
                 </div>
               </div>
             </div>
+          </a>
+          <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
@@ -110,6 +115,8 @@
                 </div>
               </div>
             </div>
+          </a>
+          <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
@@ -126,6 +133,8 @@
                 </div>
               </div>
             </div>
+          </a>
+          <a href="product-info.html">
             <div class="list-group-item list-grup-item-action">
               <div class="row">
                 <div class="col-3">
@@ -142,6 +151,8 @@
                 </div>
               </div>
             </div>
+          </a>
+          <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
@@ -158,6 +169,8 @@
                 </div>
               </div>
             </div>
+          </a>
+          <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
@@ -174,6 +187,8 @@
                 </div>
               </div>
             </div>
+          </a>
+          <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
@@ -190,6 +205,7 @@
                 </div>
               </div>
             </div>
+          </a>
             </div>
           </div>
         </div>
