--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
   <title>eMercado - Todo lo que busques está aquí</title>
   
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
   <style>
     body {
       background-color: rgb(248, 249, 250);
@@ -19,8 +19,23 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div>
+        <img class="mb-4" src="login.png" width="380">
+        <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
+        <div class="form-floating">
+          <input type="email" class="form-control" id="floatingInput" placeholder="nombre@ejemplo.com">
+          <label for="floatingInput">Correo electronico</label>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="floatingPassword" placeholder="contraseña">
+        </div>
+        <div class="checkbox mb-3">
+          <label>
+            <input type="checkbox" value="remember-me">
+            "Recuerdame"
+          </label>
+        </div>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Iniciar sesion</button>
       </div>
     </div>
   </main>
@@ -34,7 +49,7 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
-  <script src="js/login.js"></script>
+  <script src="login.js"></script>
 </body>
 
 </html>
