--- a/login.html
+++ b/login.html
@@ -28,11 +28,12 @@
         </div>
         <div class="form-floating">
           <input type="password" class="form-control" id="floatingPassword" placeholder="contraseña">
+          <label for="floatingPassword">Contraseña</label>
         </div>
         <div class="checkbox mb-3">
           <label>
             <input type="checkbox" value="remember-me">
-            "Recuerdame"
+            Recuerdame
           </label>
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">Iniciar sesion</button>
