edite login.html

--- a/login.html
+++ b/login.html
@@ -19,14 +19,14 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div>
-        <img class="mb-4 justify-content-between" src="login.png" width="380">
-        <h1 class="h3 mb-3 fw-normal justify-content-between">Inicio de sesion</h1>
-        <div class="form-floating justify-content-between">
+      <div class="justify-content-between">
+        <img class="mb-4" src="login.png" width="380">
+        <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
+        <div class="form-floating">
           <input type="email" class="form-control" id="floatingInput" placeholder="nombre@ejemplo.com">
           <label for="floatingInput">Correo electronico</label>
         </div>
-        <div class="form-floating justify-content-between">
+        <div class="form-floating">
           <input type="password" class="form-control" id="floatingPassword" placeholder="contraseña">
           <label for="floatingPassword">Contraseña</label>
         </div>
