--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="justify-content-between">
+      <div>
         <img class="mb-4" src="login.png" width="380">
         <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
         <div class="form-floating">
