--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         <img class="mb-4" src="login.png" width="380">
         <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="nombre@ejemplo.com" required>
+          <input type="email" class="form-control" id="floatingInput" placeholder="nombre@ejemplo.com" required pattern="[@] | [.com]">
           <label for="floatingInput">Correo electronico</label>
         </div>
         <div class="form-floating">
