--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
         <img class="mb-4" src="login.png" width="380">
         <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="nombre@ejemplo.com">
+          <input type="email" class="form-control" id="floatingInput" placeholder="nombre@ejemplo.com" required>
           <label for="floatingInput">Correo electronico</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="contraseña">
+          <input type="password" class="form-control" id="floatingPassword" placeholder="contraseña" required>
           <label for="floatingPassword">Contraseña</label>
         </div>
         <div class="checkbox mb-3">
