--- a/login.html
+++ b/login.html
@@ -59,12 +59,12 @@
   </footer>
 
   <div class="alert alert-success alert-dismissible fade" role="alert" id="alert-success">
-    <p>Datos guardados correctamente</p>
+    <p>Sesion iniciada</p>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 
   <div class="alert alert-danger alert-dismissible fade" role="alert" id="alert-danger">
-    <p>Los datos ingresados no cumplen con los requisitos solicitados</p>
+    <p>Por favor llenar todos los campos. El correo debe contener "@" y ".com".</p>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   <script src="login.js"></script>
