--- a/login.html
+++ b/login.html
@@ -58,12 +58,12 @@
     </div>
   </footer>
 
-  <div class="alert alert-success alert-dismissible fade" role="alert" id="alert-success">
+  <div class="alert-success alert-dismissible fade" role="alert" id="alert-success">
     <p>Sesion iniciada.</p>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 
-  <div class="alert alert-danger alert-dismissible fade" role="alert" id="alert-danger">
+  <div class="alert-danger alert-dismissible fade" role="alert" id="alert-danger">
     <p>Por favor llenar todos los campos adecuadamente.</p>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
