--- a/login.html
+++ b/login.html
@@ -60,16 +60,16 @@
 
   <div class="alert alert-success alert-dismissible fade" role="alert" id="alert-success">
     <p>Sesion iniciada.</p>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
   </div>
 
   <div class="alert alert-danger alert-dismissible fade" role="alert" id="alert-danger">
     <p>Por favor llenar todos los campos adecuadamente.</p>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
   </div>
 
   <script src="login.js"></script>
-  
+
 </body>
 
 </html>
