--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
 
   <div class="alert alert-danger alert-dismissible fade" role="alert" id="alert-danger">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    <p>Por favor llenar todos los campos adecuadamente.</p>
+    <p>Por favor llenar todos los campos.</p>
   </div>
 
   <script src="login.js"></script>
