--- a/products.html
+++ b/products.html
@@ -40,172 +40,92 @@
   </nav>
   <main role="main" class="pb-5 container">
     <div class="text-center p-4">
-      <h2>Listado</h2>
+      <h2>Productos</h2>
+      <p>Veras aqui todos los productos de la categoria Autos.</p>
     </div>
     <div class="container">
         <div class="row">
           <div class="list-group" id="cat-list-container">
-            <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
-                  <img src="cat101_1.jpg" alt="product image" class="img-thumbnail">
+                  <img src="prod50921_1.jpg" alt="product image" class="img-thumbnail">
                 </div>
                 <div class="col">
                   <div class="d-flex w-100 justify-content-between">
                     <div class="mb-1">
-                      <h4>Autos</h4>
-                      <p>Los mejores precios en autos 0 kilometro, de alta y media gama.</p>
+                      <h4>Chevrolet Onix Joy - USD13500 </h4>
+                      <p>Generación 2019, variedad de colores. Motor 1.0, ideal para ciudad. </p>
                     </div>
-                    <small class="text-muted">122 articulos</small>
-                  </div>
-                </div>
-                </div>
-              </div>
-            </a>
-            <a href="product-info.html">
-              <div class="list-group-item list-group-item-action">
-                <div class="row">
-                  <div class="col-3">
-                    <img src="cat102_1.jpg" alt="product image" class="img-thumbnail">
-                  </div>
-                  <div class="col">
-                    <div class="d-flex w-100 justify-content-between">
-                      <div class="mb-1">
-                        <h4>Juguetes</h4>
-                        <p>Encuentra aqui los mejores precios para infantes de cualquier edad.</p>
-                      </div>
-                      <small class="text-muted">354 articulos</small>
-                    </div>
+                    <small class="text-muted">14 vendidos</small>
                   </div>
                 </div>
               </div>
-            </a>
-            <a href="product-info.html">
-              <div class="list-group-item list-group-item-action">
-                <div class="row">
-                  <div class="col-3">
-                    <img src="cat103_1.jpg" alt="product image" class="img-thumbnail">
-                  </div>
+             </div>
+             <div class="list-group-item list-group-item-action">
+              <div class="row">
+                <div class="col-3">
+                  <img src="prod50922_1.jpg" alt="product image" class="img-thumbnail">
+                </div>
+                <div class="col">
                   <div class="d-flex w-100 justify-content-between">
                     <div class="mb-1">
-                      <h4>Muebles</h4>
-                      <p>Muebles antiguos, nuevos y para ser armados por uno mismo.</p>
+                      <h4>Fiat Way - USD14500</h4>
+                      <p>La versión de Fiat que brinda confort y a un precio accesible.</p>
                     </div>
-                    <small class="text-muted">157 articulos</small>
+                    <small class="text-muted">52 vendidos</small>
                   </div>
                 </div>
               </div>
             </div>
-          </a>
-          <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
-                  <img src="cat104_1.jpg" alt="product image" class="img-thumbnail">
+                  <img src="prod50923_1.jpg" alt="product image" class="img-thumbnail">
                 </div>
                 <div class="col">
                   <div class="d-flex w-100 justify-content-between">
                     <div class="mb-1">
-                      <h4>Herramientas</h4>
-                      <p>Herramientas para cualquier tipo de trabajo.</p>
+                      <h4>Suzuki Celerio - USD12500</h4>
+                      <p>Un auto que se ha ganado la buena fama por su economía con el combustible.</p>
                     </div>
-                    <small class="text-muted">452 articulos</small>
+                    <small class="text-muted">25 vendidos</small>
                   </div>
                 </div>
               </div>
             </div>
-          </a>
-          <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
-                  <img src="cat105_1.jpg" alt="product image" class="img-thumbnail">
+                  <img src="prod50924_1.jpg" alt="product image" class="img-thumbnail">
                 </div>
                 <div class="col">
                   <div class="d-flex w-100 justify-content-between">
                     <div class="mb-1">
-                      <h4>Computadoras</h4>
-                      <p>Todo en cuanto a computadoras, para uso de oficina y/o juegos.</p>
+                      <h4>Peugeot 208 - USD15200</h4>
+                      <p>El modelo de auto que se sigue renovando y manteniendo su prestigio en comodidad.</p>
                     </div>
-                    <small class="text-muted">724 articulos</small>
+                    <small class="text-muted">17 vendidos</small>
                   </div>
                 </div>
               </div>
             </div>
-          </a>
-          <a href="product-info.html">
-            <div class="list-group-item list-grup-item-action">
-              <div class="row">
-                <div class="col-3">
-                  <img src="cat106_1.jpg" alt="product image" class="img-thumbnail">
-                </div>
-                <div class="col">
-                  <div class="d-flex w-100 justify-content-between">
-                    <div class="mb-1">
-                      <h4>Vestimenta</h4>
-                      <p>Gran variedad de ropa, nueva y de segunda mano.</p>
-                    </div>
-                    <small clas="text-muted">841 articulos</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
-          <a href="product-info.html">
             <div class="list-group-item list-group-item-action">
               <div class="row">
                 <div class="col-3">
-                  <img src="cat107_1.jpg" alt="product image" class="img-thumbnail">
+                  <img src="prod50925_1.jpg" alt="product image" class="img-thumbnail">
                 </div>
                 <div class="col">
                   <div class="d-flex w-100 justify-content-between">
                     <div class="mb-1">
-                      <h4>Electrodometsicos</h4>
-                      <p>Todos los electrodomesticos modernos y de bajo consumo.</p>
+                      <h4>Bugatti Chiron - USD3500000</h4>
+                      <p>El mejor hiperdeportivo de mundo. Producción limitada a 500 unidades.</p>
                     </div>
-                    <small class="text-muted">84 articulos</small>
+                    <small class="text-muted">0 vendidos</small>
                   </div>
                 </div>
               </div>
             </div>
-          </a>
-          <a href="product-info.html">
-            <div class="list-group-item list-group-item-action">
-              <div class="row">
-                <div class="col-3">
-                  <img src="cat108_1.jpg" alt="product image" class="img-thumbnail">
-                </div>
-                <div class="col">
-                  <div class="d-flex w-100 justify-content-between">
-                    <div class="mb-1">
-                      <h4>Deporte</h4>
-                      <p>Toda la variedad de insumentaria para todo tipo de deporte.</p>
-                    </div>
-                    <small class="text-muted">574 articulos</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
-          <a href="product-info.html">
-            <div class="list-group-item list-group-item-action">
-              <div class="row">
-                <div class="col-3">
-                  <img src="cat109_1.jpg" alt="product image" class="img-thumbnail">
-                </div>
-                <div class="col">
-                  <div class="d-flex w-100 justify-content-between">
-                    <div class="mb-1">
-                      <h4>Celulares</h4>
-                      <p>Celulares de todo tipo para cubrir todas las necesidades.</p>
-                    </div>
-                    <small class="text-muted">124 articulos</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
             </div>
           </div>
         </div>
