--- a/categories.html
+++ b/categories.html
@@ -7,9 +7,9 @@
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="font-awesome.min.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -77,6 +77,167 @@
       </div>
       <div class="row">
         <div class="list-group" id="cat-list-container">
+          <a href="products.html">
+            <div class="list-group-item list-group-item-action">
+              <div class="row">
+                <div class="col-3">
+                  <img src="cat101_1.jpg" alt="product image" class="img-thumbnail">
+                </div>
+                <div class="col">
+                  <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1">
+                      <h4>Autos</h4>
+                      <p>Los mejores precios en autos 0 kilometro, de alta y media gama.</p>
+                    </div>
+                    <small class="text-muted">122 articulos</small>
+                  </div>
+                </div>
+                </div>
+              </div>
+            </a>
+            <a href="products.html">
+              <div class="list-group-item list-group-item-action">
+                <div class="row">
+                  <div class="col-3">
+                    <img src="cat102_1.jpg" alt="product image" class="img-thumbnail">
+                  </div>
+                  <div class="col">
+                    <div class="d-flex w-100 justify-content-between">
+                      <div class="mb-1">
+                        <h4>Juguetes</h4>
+                        <p>Encuentra aqui los mejores precios para infantes de cualquier edad.</p>
+                      </div>
+                      <small class="text-muted">354 articulos</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="products.html">
+              <div class="list-group-item list-group-item-action">
+                <div class="row">
+                  <div class="col-3">
+                    <img src="cat103_1.jpg" alt="product image" class="img-thumbnail">
+                  </div>
+                  <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1">
+                      <h4>Muebles</h4>
+                      <p>Muebles antiguos, nuevos y para ser armados por uno mismo.</p>
+                    </div>
+                    <small class="text-muted">157 articulos</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="products.html">
+            <div class="list-group-item list-group-item-action">
+              <div class="row">
+                <div class="col-3">
+                  <img src="cat104_1.jpg" alt="product image" class="img-thumbnail">
+                </div>
+                <div class="col">
+                  <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1">
+                      <h4>Herramientas</h4>
+                      <p>Herramientas para cualquier tipo de trabajo.</p>
+                    </div>
+                    <small class="text-muted">452 articulos</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="products.html">
+            <div class="list-group-item list-group-item-action">
+              <div class="row">
+                <div class="col-3">
+                  <img src="cat105_1.jpg" alt="product image" class="img-thumbnail">
+                </div>
+                <div class="col">
+                  <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1">
+                      <h4>Computadoras</h4>
+                      <p>Todo en cuanto a computadoras, para uso de oficina y/o juegos.</p>
+                    </div>
+                    <small class="text-muted">724 articulos</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="products.html">
+            <div class="list-group-item list-grup-item-action">
+              <div class="row">
+                <div class="col-3">
+                  <img src="cat106_1.jpg" alt="product image" class="img-thumbnail">
+                </div>
+                <div class="col">
+                  <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1">
+                      <h4>Vestimenta</h4>
+                      <p>Gran variedad de ropa, nueva y de segunda mano.</p>
+                    </div>
+                    <small clas="text-muted">841 articulos</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="products.html">
+            <div class="list-group-item list-group-item-action">
+              <div class="row">
+                <div class="col-3">
+                  <img src="cat107_1.jpg" alt="product image" class="img-thumbnail">
+                </div>
+                <div class="col">
+                  <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1">
+                      <h4>Electrodometsicos</h4>
+                      <p>Todos los electrodomesticos modernos y de bajo consumo.</p>
+                    </div>
+                    <small class="text-muted">84 articulos</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="products.html">
+            <div class="list-group-item list-group-item-action">
+              <div class="row">
+                <div class="col-3">
+                  <img src="cat108_1.jpg" alt="product image" class="img-thumbnail">
+                </div>
+                <div class="col">
+                  <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1">
+                      <h4>Deporte</h4>
+                      <p>Toda la variedad de insumentaria para todo tipo de deporte.</p>
+                    </div>
+                    <small class="text-muted">574 articulos</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="products.html">
+            <div class="list-group-item list-group-item-action">
+              <div class="row">
+                <div class="col-3">
+                  <img src="cat109_1.jpg" alt="product image" class="img-thumbnail">
+                </div>
+                <div class="col">
+                  <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1">
+                      <h4>Celulares</h4>
+                      <p>Celulares de todo tipo para cubrir todas las necesidades.</p>
+                    </div>
+                    <small class="text-muted">124 articulos</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
@@ -99,9 +260,9 @@
       <div></div>
     </div>
   </div>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/categories.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="init.js"></script>
+  <script src="categories.js"></script>
 </body>
 
 </html>
