--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
   <main class="mt-5">
     <div class="container">
       <div>
-        <img class="mb-4" src="login.png" width="380">
+        <img class="mb-4" src="img/login.png" width="380">
         <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
         <div class="form-floating">
           <input type="email" class="form-control" id="floatingInput" placeholder="nombre@ejemplo.com" required>
