--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,10 +33,13 @@
           </li>
         </ul>
       </div>
+      <p style="color:powderblue">Bienvenid@, <span id="email"></span>!</p>
+      <button id="cierro" class="btn btn-danger">Cerrar sesion</button>
     </div>
   </nav>
   <main>
-    <div class="jumbotron text-center"></div>
+    <div class="jumbotron text-center">
+    </div>
     <div class="album py-5 bg-light">
       <div class="container">
         <div class="row">
@@ -87,9 +90,9 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/index.js"></script>
-  <script src="js/init.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="index.js"></script>
+  <script src="init.js"></script>
 </body>
 
 </html>
