--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </li>
         </ul>
       </div>
-      <p style="color:powderblue">Bienvenid@, <span id="email"></span>!</p>
+      <p style="color:powderblue">Bienvenid@, <span id="usuario"></span>!</p>
       <button id="cierro" class="btn btn-danger">Cerrar sesion</button>
     </div>
   </nav>
