--- a/products.html
+++ b/products.html
@@ -44,6 +44,10 @@
       <p>Veras aqui todos los productos de la categoria Autos.</p>
     </div>
     <div class="container">
+      <div class="search-wrapper">
+        <label for="search">Buscar productos</label>
+        <input type="search" id="search">
+      </div>
       <div class="row">
         <div class="col text-end">
           <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
