--- a/product-info.html
+++ b/product-info.html
@@ -38,7 +38,7 @@
   </nav>
   <main role="main" class="pb-5 container">
    <div class="text-center p-4">
-    
+    Nombre del Producto fjeijfijrifijrij
    </div>
     <div class="container">
       <div class="row">
