--- a/product-info.html
+++ b/product-info.html
@@ -43,7 +43,22 @@
     <div class="container">
       <div class="row">
         <div class="list-group" id="cat-list-container">
-         
+          <div>
+            <h4>Precio</h4>
+            <span id="Precio"></span>
+            <br>
+            <h4>Descripcion</h4>
+            <span id="Descripcion"></span>
+            <br>
+            <h4>Categoria</h4>
+            <span id="Categoria"></span>
+            <br>
+            <h4>Cantidad de vendidos</h4>
+            <span id="Vendidos"></span>
+            <br>
+            <h4>Imagenes ilustrativas</h4>
+            <span id="Imagenes"></span>
+          </div>
         </div>
       </div>
     </div>
