--- a/product-info.html
+++ b/product-info.html
@@ -38,7 +38,7 @@
   </nav>
   <main role="main" class="pb-5 container">
    <div class="text-center p-4">
-    Nombre del Producto fjeijfijrifijrij
+    <h1><span id="Nombre"></span></h1>
    </div>
     <div class="container">
       <div class="row">
@@ -58,6 +58,10 @@
             <br>
             <h4>Imagenes ilustrativas</h4>
             <span id="Imagenes"></span>
+            <br>
+            <hr>
+            <h3>Comentarios</h3>
+            <div class="mb-4 cat-list-container" id="Comentarios"></div>
           </div>
         </div>
       </div>
