--- a/product-info.html
+++ b/product-info.html
@@ -37,9 +37,9 @@
     </div>
   </nav>
   <main role="main" class="pb-5 container">
-   <div class="text-center p-4">
-    <h1><span id="Nombre"></span></h1>
-   </div>
+    <div class="text-center p-4">
+      <h1><span id="Nombre"></span></h1>
+    </div>
     <div class="container">
       <div class="row">
         <div class="list-group" id="cat-list-container">
@@ -61,7 +61,9 @@
             <br>
             <hr>
             <h3>Comentarios</h3>
-            <div class="mb-4 cat-list-container" id="Comentarios"></div>
+            <div class="mb-4 cat-list-container" id="comentarios">
+              
+            </div>
           </div>
         </div>
       </div>
