--- a/product-info.html
+++ b/product-info.html
@@ -64,6 +64,23 @@
             <div class="mb-4 cat-list-container" id="comentarios">
               
             </div>
+            <br>
+            <h3>Comparta su opinion:</h3>
+            <hr>
+            <form>
+              <p><textarea name="nuevocomentario" id="nuevocomentario" class="form-control"></textarea></p>
+              <p>Puntue su experiencia con el producto:</p>
+              <form>
+                <select class="form-control" id="puntaje">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                </select>
+              </form>
+              <input class="btn btn-primary" type="button" value="Enviar" id="enviar">
+            </form>
           </div>
         </div>
       </div>
