--- a/product-info.html
+++ b/product-info.html
@@ -82,7 +82,12 @@
               <input class="btn btn-primary" type="button" value="Enviar" id="enviar">
             </form>
           </div>
+          <br>
         </div>
+        <br>
+        <h3>Productos Relacionados:</h3>
+        <hr>
+        <span id="relacionados"></span>
       </div>
     </div>
   </main>
