--- a/index.html
+++ b/index.html
@@ -33,8 +33,17 @@
           </li>
         </ul>
       </div>
-      <p style="color:powderblue">Bienvenid@, <span id="usuario"></span>!</p>
-      <button id="cierro" class="btn btn-danger">Cerrar sesion</button>
+      
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <p style="color:powderblue">Bienvenid@, <span id="usuario"></span>!</p>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+          <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
+          <li><a class="dropdown-item" href="login.html" id="cierro">Cerrar sesion</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
   <main>
