--- a/cart.html
+++ b/cart.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="font-awesome.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,10 +36,20 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+    <div class="container" id="carrito">
+      <br><h2 class="mb-1">Carrito de Compras</h2><br>
+      <h4 class="mb-1">Articulos a Comprar</h4><br>
+      <table>
+        <thead>
+          <tr>
+            <td><p>Nombre</p></td><td><p>Costo</p></td><td><p>Cantidad</p></td><td><p>Subtotal</p></td>
+          </tr>
+        </thead>
+        <tbody id="infoCarrito">
+         
+        </tbody>
+        <tfoot></tfoot>
+      </table>
     </div>
   </main>
   <footer class="text-muted">
@@ -60,9 +70,9 @@
       <div></div>
     </div>
   </div>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/cart.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="init.js"></script>
+  <script src="cart.js"></script>
 </body>
 
 </html>
