--- a/cart.html
+++ b/cart.html
@@ -37,19 +37,36 @@
   </nav>
   <main>
     <div class="container" id="carrito">
-      <br><h2 class="mb-1">Carrito de Compras</h2><br>
-      <h4 class="mb-1">Articulos a Comprar</h4><br>
-      <table>
-        <thead>
-          <tr>
-            <td><p>Nombre</p></td><td><p>Costo</p></td><td><p>Cantidad</p></td><td><p>Subtotal</p></td>
-          </tr>
-        </thead>
-        <tbody id="infoCarrito">
-         
-        </tbody>
-        <tfoot></tfoot>
-      </table>
+      <div class="d-flex justify-content-center my-5">
+        <br>
+        <h2 class="mb-1">Carrito de Compras</h2><br>
+      </div>
+      <h5 class="mb-1">Articulos a Comprar</h5><br>
+      <div>
+        <table class="table">
+          <thead>
+            <tr>
+              <td></td>
+              <th scope="col">
+                <p>Nombre</p>
+              </th>
+              <th scope="col">
+                <p>Costo</p>
+              </th>
+              <th scope="col">
+                <p>Cantidad</p>
+              </th>
+              <th scope="col">
+                <p>Subtotal</p>
+              </th>
+            </tr>
+          </thead>
+          <tbody id="infoCarrito">
+
+          </tbody>
+          <tfoot></tfoot>
+        </table>
+      </div>
     </div>
   </main>
   <footer class="text-muted">
