--- a/cart.html
+++ b/cart.html
@@ -67,6 +67,54 @@
           <tfoot></tfoot>
         </table>
       </div>
+      <hr>
+      <h5 class="mb-1">Tipo de Envío</h5>
+      <br>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+        <label class="form-check-label" for="flexRadioDefault1">
+          Premium 2 a 5 dias (15%)
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+        <label class="form-check-label" for="flexRadioDefault2">
+          Express 5 a 8 dias (7%)
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+        <label class="form-check-label" for="flexRadioDefault3">
+          Standard 12 a 15 dias (5%)
+        </label>
+      </div>
+      <br>
+      <h5 class="mb-1">Dirección de Envío</h5>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-9"></div>
+          <div class="col-6">
+          <p>Calle</p>
+          <input class="form-control" type="text" placeholder="Ej: Calle C" aria-label="default input example">
+          </div>
+          <div class="col-4">
+          <p>Número</p>
+          <input class="form-control" type="text" placeholder="Ej: 1234" aria-label="default input example"> 
+          </div>
+        </div>
+      </div>
+      <br>
+        <div class="container">
+        <div class="row">
+          <div class="col-9"></div>
+          <div class="col-6">
+          <p>Esquina</p>
+          <input class="form-control" type="text" placeholder="Ej: Salamin" aria-label="default input example">
+          </div>
+        </div>
+      </div>
+
     </div>
   </main>
   <footer class="text-muted">
