--- a/product-info.html
+++ b/product-info.html
@@ -38,7 +38,7 @@
   </nav>
   <main role="main" class="pb-5 container">
     <div class="text-center p-4">
-      <h1><span id="Nombre"></span></h1>
+      <h1><span id="Nombre"></span></h1> <button onclick="setCompradoID()" type="button" class="btn btn-success" id="comprar">Comprar</button>
     </div>
     <div class="container">
       <div class="row">
